--- a/index.html
+++ b/index.html
@@ -245,7 +245,26 @@
                     <li class="bug-type">Bug</li>
                 </ul>
 
-                <p class="description">In battle, it flaps its wings at great speed to release highly toxic dust into the air.</p>
+                <p class="description">In battle, it flaps its wings at great speed to release highly toxic dust into
+                    the air.</p>
+
+            </li>
+
+            <li class="pokemon-card">
+
+                <div class="informations">
+                    <span>Weedle</span>
+                    <span>#013</span><s></s>
+                </div>
+
+                <img src="/src/images/weedle.gif" alt="metapod" class="gif">
+
+                <ul class="types">
+                    <li class="bug-type">Bug</li>
+                </ul>
+
+                <p class="description">Beware of the sharp stinger on its head. It hides in grass and bushes where it
+                    eats leaves.</p>
 
             </li>
 
