--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
     <header>
         <a href="#">
-            <img src="/src/images/pokeball.png" alt="pokeball" class="logo">
+            <img src="./src/images/pokeball.png" alt="pokeball" class="logo">
         </a>
 
         <button id="changing-theme-button">
-            <img src="/src/images/sun.png" alt="changing-theme-button" class="button-image">
+            <img src="./src/images/sun.png" alt="changing-theme-button" class="button-image">
         </button>
     </header>
 
@@ -37,7 +37,7 @@
                     <span>#001</span>
                 </div>
 
-                <img src="/src/images/bulbasaur.gif" alt="bulbasaur" class="gif">
+                <img src="./src/images/bulbasaur.gif" alt="bulbasaur" class="gif">
 
                 <ul class="types">
                     <li class="grass-type">Grass</li>
@@ -56,7 +56,7 @@
                     <span>#002</span>
                 </div>
 
-                <img src="/src/images/ivysaur.gif" alt="ivysaur" class="gif">
+                <img src="./src/images/ivysaur.gif" alt="ivysaur" class="gif">
 
                 <ul class="types">
                     <li class="grass-type">Grass</li>
@@ -75,7 +75,7 @@
                     <span>#003</span>
                 </div>
 
-                <img src="/src/images/venusaur.gif" alt="venusaur" class="gif">
+                <img src="./src/images/venusaur.gif" alt="venusaur" class="gif">
 
                 <ul class="types">
                     <li class="grass-type">Grass</li>
@@ -94,7 +94,7 @@
                     <span>#004</span>
                 </div>
 
-                <img src="/src/images/charmander.gif" alt="charmander" class="gif">
+                <img src="./src/images/charmander.gif" alt="charmander" class="gif">
 
                 <ul class="types">
                     <li class="fire-type">Fire</li>
@@ -112,7 +112,7 @@
                     <span>#005</span>
                 </div>
 
-                <img src="/src/images/charmeleon.gif" alt="charmeleon" class="gif">
+                <img src="./src/images/charmeleon.gif" alt="charmeleon" class="gif">
 
                 <ul class="types">
                     <li class="fire-type">Fire</li>
@@ -130,7 +130,7 @@
                     <span>#006</span>
                 </div>
 
-                <img src="/src/images/charizard.gif" alt="charizard" class="gif">
+                <img src="./src/images/charizard.gif" alt="charizard" class="gif">
 
                 <ul class="types">
                     <li class="fire-type">Fire</li>
@@ -149,7 +149,7 @@
                     <span>#007</span>
                 </div>
 
-                <img src="/src/images/squirtle.gif" alt="squirtle" class="gif">
+                <img src="./src/images/squirtle.gif" alt="squirtle" class="gif">
 
                 <ul class="types">
                     <li class="water-type">Water</li>
@@ -167,7 +167,7 @@
                     <span>#008</span>
                 </div>
 
-                <img src="/src/images/wartortle.gif" alt="wartortle" class="gif">
+                <img src="./src/images/wartortle.gif" alt="wartortle" class="gif">
 
                 <ul class="types">
                     <li class="water-type">Water</li>
@@ -185,7 +185,7 @@
                     <span>#009</span>
                 </div>
 
-                <img src="/src/images/blastoise.gif" alt="blastoise" class="gif">
+                <img src="./src/images/blastoise.gif" alt="blastoise" class="gif">
 
                 <ul class="types">
                     <li class="water-type">Water</li>
@@ -203,7 +203,7 @@
                     <span>#010</span>
                 </div>
 
-                <img src="/src/images/caterpie.gif" alt="caterpie" class="gif">
+                <img src="./src/images/caterpie.gif" alt="caterpie" class="gif">
 
                 <ul class="types">
                     <li class="bug-type">Bug</li>
@@ -221,7 +221,7 @@
                     <span>#011</span>
                 </div>
 
-                <img src="/src/images/metapod.gif" alt="metapod" class="gif">
+                <img src="./src/images/metapod.gif" alt="metapod" class="gif">
 
                 <ul class="types">
                     <li class="bug-type">Bug</li>
@@ -239,7 +239,7 @@
                     <span>#012</span><s></s>
                 </div>
 
-                <img src="/src/images/butterfree.gif" alt="metapod" class="gif">
+                <img src="./src/images/butterfree.gif" alt="metapod" class="gif">
 
                 <ul class="types">
                     <li class="bug-type">Bug</li>
@@ -257,7 +257,7 @@
                     <span>#013</span><s></s>
                 </div>
 
-                <img src="/src/images/weedle.gif" alt="metapod" class="gif">
+                <img src="./src/images/weedle.gif" alt="metapod" class="gif">
 
                 <ul class="types">
                     <li class="bug-type">Bug</li>
