--- a/index.html
+++ b/index.html
@@ -257,13 +257,13 @@
                     <span>#013</span><s></s>
                 </div>
 
-                <img src="./src/images/weedle.gif" alt="metapod" class="gif">
+                <img src="../src/images/weedle.gif" alt="metapod" class="gif">
 
                 <ul class="types">
                     <li class="bug-type">Bug</li>
                 </ul>
 
-                <p class="description">Beware of the sharp stinger on its head. It hides in grass and bushes where it
+                <p class="description">Bewarde of the sharp stinger on its head. It hides in grass and bushes where it
                     eats leaves.</p>
 
             </li>
