--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <span>#012</span><s></s>
                 </div>
 
-                <img src="./src/images/butterfree.gif" alt="metapod" class="gif">
+                <img src="./src/images/butterfree.gif" alt="butterfree" class="gif">
 
                 <ul class="types">
                     <li class="bug-type">Bug</li>
@@ -257,7 +257,7 @@
                     <span>#013</span><s></s>
                 </div>
 
-                <img src="../src/images/weedle.gif" alt="metapod" class="gif">
+                <img src="./src/images/weedle.gif" alt="weedle" class="gif">
 
                 <ul class="types">
                     <li class="bug-type">Bug</li>
