--- a/index.html
+++ b/index.html
@@ -268,6 +268,25 @@
 
             </li>
 
+            <li class="pokemon-card">
+
+                <div class="informations">
+                    <span>Kakuna</span>
+                    <span>#014</span><s></s>
+                </div>
+
+                <img src="./src/images/kakuna.gif" alt="kakuna" class="gif">
+
+                <ul class="types">
+                    <li class="bug-type">Bug</li>
+                    <li class="poison-type">Poison</li>
+                </ul>
+
+                <p class="description">Able to move only slightly. When endangered, it may stick out its stinger and
+                    poison its enemy.</p>
+
+            </li>
+
         </ul>
     </main>
     <script src="./src/js/index.js"></script>
