--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
                 <div class="informations">
                     <span>Butterfree</span>
-                    <span>#012</span><s></s>
+                    <span>#012</span>
                 </div>
 
                 <img src="./src/images/butterfree.gif" alt="butterfree" class="gif">
@@ -254,7 +254,7 @@
 
                 <div class="informations">
                     <span>Weedle</span>
-                    <span>#013</span><s></s>
+                    <span>#013</span>
                 </div>
 
                 <img src="./src/images/weedle.gif" alt="weedle" class="gif">
@@ -272,7 +272,7 @@
 
                 <div class="informations">
                     <span>Kakuna</span>
-                    <span>#014</span><s></s>
+                    <span>#014</span>
                 </div>
 
                 <img src="./src/images/kakuna.gif" alt="kakuna" class="gif">
@@ -284,6 +284,25 @@
 
                 <p class="description">Able to move only slightly. When endangered, it may stick out its stinger and
                     poison its enemy.</p>
+
+            </li>
+
+            <li class="pokemon-card">
+
+                <div class="informations">
+                    <span>Beedrill</span>
+                    <span>#015</span>
+                </div>
+
+                <img src="./src/images/beedrill.gif" alt="beedrill" class="gif">
+
+                <ul class="types">
+                    <li class="bug-type">Bug</li>
+                    <li class="poison-type">Poison</li>
+                </ul>
+
+                <p class="description">It has three poisonous stingers on its forelegs and its tail. They are used to
+                    jab its enemy repeatedly.</p>
 
             </li>
 
