--- a/index.html
+++ b/index.html
@@ -306,6 +306,100 @@
 
             </li>
 
+            <li class="pokemon-card">
+
+                <div class="informations">
+                    <span>Pidgey</span>
+                    <span>#016</span>
+                </div>
+
+                <img src="./src/images/pidgey.gif" alt="pidgey" class="gif">
+
+                <ul class="types">
+                    <li class="normal-type">Normal</li>
+                    <li class="flying-type">Flying</li>
+                </ul>
+
+                <p class="description">Very docile. If attacked, it will often kick up sand to protect itself rather
+                    than fight back.</p>
+
+            </li>
+
+            <li class="pokemon-card">
+
+                <div class="informations">
+                    <span>Pidgeotto</span>
+                    <span>#017</span>
+                </div>
+
+                <img src="./src/images/pidgeotto.gif" alt="pidgeotto" class="gif">
+
+                <ul class="types">
+                    <li class="normal-type">Normal</li>
+                    <li class="flying-type">Flying</li>
+                </ul>
+
+                <p class="description">This Pokémon is full of vitality. It constantly flies around its large territory
+                    in search of prey.</p>
+
+            </li>
+
+            <li class="pokemon-card">
+
+                <div class="informations">
+                    <span>Pidgeot</span>
+                    <span>#018</span>
+                </div>
+
+                <img src="./src/images/pidgeot.gif" alt="pidgeot" class="gif">
+
+                <ul class="types">
+                    <li class="normal-type">Normal</li>
+                    <li class="flying-type">Flying</li>
+                </ul>
+
+                <p class="description">This Pokémon flies at Mach 2 speed, seeking prey. Its large talons are feared as
+                    wicked weapons.</p>
+
+            </li>
+
+            <li class="pokemon-card">
+
+                <div class="informations">
+                    <span>Rattata</span>
+                    <span>#019</span>
+                </div>
+
+                <img src="./src/images/rattata.gif" alt="rattata" class="gif">
+
+                <ul class="types">
+                    <li class="normal-type">Normal</li>
+                </ul>
+
+                <p class="description">Will chew on anything with its fangs. If you see one, you can be certain that 40
+                    more live in the area.</p>
+
+            </li>
+
+            <li class="pokemon-card">
+
+                <div class="informations">
+                    <span>Raticate</span>
+                    <span>#020</span>
+                </div>
+
+                <img src="./src/images/raticate.gif" alt="raticate" class="gif">
+
+                <ul class="types">
+                    <li class="normal-type">Normal</li>
+                </ul>
+
+                <p class="description">Its hind feet are webbed. They act as flippers, so it can swim in rivers and hunt
+                    for prey.</p>
+
+            </li>
+
+
         </ul>
     </main>
     <script src="./src/js/index.js"></script>
